# it-solution-test

./: .gitignore  Dockerfile  config.py  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  script.py
backend/: settings.py  urls.py
vid/: forms.py  models.py  utils.py  views.py
vid/migrations/: 0001_initial.py
vid/templates/: homepage.html
