[tool.poetry]
name = "it-solution-test"
version = "0.1.0"
description = ""
authors = ["Artem Oluwo <oluwoartem@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.3.0"
moviepy = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
